--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ flake8-html==0.4.3
 Jinja2==3.1.2
 MarkupSafe==2.1.2
 mccabe==0.7.0
+Pillow==9.4.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 Pygments==2.14.0
