--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.6.0
+beautifulsoup4==4.11.2
 Django==4.1.7
+django-bootstrap-v5==1.0.11
 flake8==6.0.0
 flake8-html==0.4.3
 Jinja2==3.1.2
@@ -9,5 +11,6 @@ Pillow==9.4.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 Pygments==2.14.0
+soupsieve==2.4
 sqlparse==0.4.3
 tzdata==2022.7
