--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.6.0
 beautifulsoup4==4.11.2
+crispy-bootstrap5==0.7
 Django==4.1.7
 django-bootstrap-v5==1.0.11
+django-crispy-forms==2.0
 flake8==6.0.0
 flake8-html==0.4.3
 Jinja2==3.1.2
