--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,13 @@ beautifulsoup4==4.11.2
 crispy-bootstrap5==0.7
 Django==4.1.7
 django-bootstrap-v5==1.0.11
+django-braces==1.15.0
 django-crispy-forms==2.0
+django-generic-positions==0.2.3
+django-hvad==1.8.0
+django-libs==2.0.3
+django-model-utils==4.3.1
+django-user-media==1.2.5
 flake8==6.0.0
 flake8-html==0.4.3
 Jinja2==3.1.2
@@ -13,6 +19,8 @@ Pillow==9.4.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 Pygments==2.14.0
+simplejson==3.18.3
 soupsieve==2.4
 sqlparse==0.4.3
+swapper==1.3.0
 tzdata==2022.7
